@@ -1,3 +1,6 @@
+Bug fixes :
+
+* SOP_ParameterisedHolder properly handles the GIL before using the CapturingRenderer.
 
 Cortex 6.1.2
 ============
